trino/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trino-ingress
  namespace: trino
spec:
  rules:
  - host: trino.deplatform.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trino
            port:
              number: 8666
---
apiVersion: v1
kind: Service
metadata:
  name: trino
  namespace: trino
spec:
  ports:
    - port: 80 # the service port
      targetPort: 8666   # The deployment port
      name: http
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: trino
    app.kubernetes.io/instance: trino-cluster
    app.kubernetes.io/component: coordinator
